SMART WRAP - Added smart wrap option in index.html, added, defined and created a function for the property in text-element.js, created basic property definition in system.js, and defined it in component.js

--- a/examples/ui/index.html
+++ b/examples/ui/index.html
@@ -140,6 +140,7 @@
                     height: 64,
                     type: "text",
                     text: text,
+                    smartWrap: true,
                     fontAsset: fontAsset,
                     color: new pc.Color(1,1,1),
                     opacity: 0.5
@@ -216,12 +217,12 @@
                     textureAsset: panelAsset
                 });
 
-                button = createButton("START", 0, -22, function () {
+                button = createButton("Testing line length with wrap", 0, -22, function () {
                     showGame();
                 });
                 panel.addChild(button);
 
-                button = createButton("ANNOY", 0, -108, function () {
+                button = createButton("One Line", 0, -108, function () {
                     toggleSpin();
                 });
                 panel.addChild(button);
